--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
+    "react-date-picker": "^11.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.1.3"
   },
