--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
+    "@types/prop-types": "^15.7.14",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
     "react-date-picker": "^11.0.0",
     "react-dom": "^19.0.0",
+    "react-swipeable-list": "^1.10.0",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
